--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,10 +41,10 @@ jobs:
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.VPS_HOST }}
-          port: ${{ secrets.VPS_PORT || 22 }}
+          port: 22
           username: ${{ secrets.VPS_USERNAME }}
-          password: ${{ secrets.VPS_PASSWORD }}
-          timeout: 60s
+          key: ${{ secrets.VPS_SSH_KEY }}
+          timeout: 120s
           command_timeout: 30m
           script: |
             cd /var/www/inboop-frontend
